gcc/testsuite/rust/rustc/ui/parser/match-arrows-block-then-binop.rs
fn main() {
    let _ = match 0 {
      0 => {
        0
      } + 5 // { dg-error "" "" { target *-*-* } }
    };
}

